# cmake-project-template

./: .gitignore  CMakeLists.txt
script/: generatetags
src/: CMakeLists.txt
src/division/: CMakeLists.txt
test/: CMakeLists.txt
